Fixed a small margin issue on Tomahawk theme. The menu bar was a little bit out of the screen.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@915807 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/tomahawk/webapp/tomahawk/css/style.css
+++ b/themes/tomahawk/webapp/tomahawk/css/style.css
@@ -1545,7 +1545,7 @@ background-image: url(../images/tab_bar.gif);
 background-repeat:repeat-x;
 padding:5px 10px 0px 10px;
 font-size:1.1em;
-margin: 0px -7px;
+margin: 0px;
 }
 
 .tab-bar ul li {
